# exercise_python_koni

./: Douwa  Douwa.txt  README.md  doctest_q1.py  github_test_20210203_1800.py  pyproject.toml  xmlfile.xml
.github/workflows/: CheckCodeStyleWithBlack.yml
exercise_python_koni/chapter_1/: 1_Q.py
exercise_python_koni/chapter_10/: c10_1.py  c10_2.py  c10_3.py  c10_4.py  c10_5.py
exercise_python_koni/chapter_11/: c11_1_2.py  c11_1_3#2.py  c11_1_3.py  c11_1_6.py  c11_2_4_udp_client.py  c11_2_4_udp_server.py
exercise_python_koni/chapter_11/c11_q/: q11_1_client.py  q11_1_server.py
exercise_python_koni/chapter_2/: 2_Q.py
exercise_python_koni/chapter_3/: 3-2_list.py  3-3_tuple.py  3-4_dict.py  3_Q.py
exercise_python_koni/chapter_4/: 4_Q.py  4_logic.py
exercise_python_koni/chapter_5/: c5_1_test1.py  c5_2_test2.py  c5_3_1_report.py  c5_3_1_weatherman.py  c5_3_2_import.py  c5_3_3_import2.py  c5_3_report.py  c5_3_weatherman.py  c5_4_weathers.py
exercise_python_koni/chapter_5/c5_4_sources/: c5_4_daily.py  c5_4_weekly.py
exercise_python_koni/chapter_5/c5_Q/: c5_q1_call.py  c5_q2_call.py  c5_q3_call.py  c5_q4_call.py  c5_q5_dict.py  (+2 more)
exercise_python_koni/chapter_6/: c6_2_class.py  c6_3_succession.py  c6_4_succession.py  c6_4_succession2.py  c6_5_addmethod.py  c6_6_super.py  c6_7_self.py  c6_8_property.py
exercise_python_koni/chapter_7/: 7_1_1_1.py  7_1_2_2.py  7_1_2_3.py
exercise_python_koni/chapter_8/: c8_1_1.py  c8_1_5.py
exercise_python_koni/mine/: 参考.txt
exercise_python_koni/original/: json2xml.py
tests/: test_exercise_python_koni.py  test_q1_doctest.py
(+9 files in other folders)
