[tool.poetry]
name = "exercise_python_koni"
version = "0.1.0"
description = ""
authors = ["konishis <78391126+konishis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.18.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
